--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -301,11 +301,7 @@
       mutable: {{mutable|lower}},
       filters: {{feature_filters|to_json}},
 
-      help: {
-        legacy_extra: 'https://help.nyaruka.com/en/articles/3747485-migrating-away-from-legacy_extra',
-        missing_dependency: 'http://help.nyaruka.com/en/articles/3747650-fixing-missing-dependencies',
-        invalid_regex: 'http://help.nyaruka.com/en/articles/3747654-invalid-regular-expressions'
-      },
+      help: {},
 
       endpoints: {
 
