Open edit modal on campaignevent page when flow params clicked.

--- a/templates/campaigns/campaignevent_read.haml
+++ b/templates/campaigns/campaignevent_read.haml
@@ -48,7 +48,7 @@
         Flow
         -if object.extra
           |
-          %a.href{href:"#", data-success-url:"", class:"update-event", data-original-title:"", title:""}
+          %span.linked(onclick='javascript:showModax("event-update")')
             -trans "Contains flow parameters"
 
 
