--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -33,7 +33,8 @@
             &nbsp;triggered
 
           %a(href='{%url "campaigns.campaignevent_read" eventfire.event.id %}')
-            {{ eventfire.event|campaign_event_time }}
+            {{ eventfire.event.get_offset_display }}
+            {{ eventfire.event.relative_to.label }}
 
       -elif event.type == 'channel_event'
         -with event.obj as ch_event
