--- a/templates/campaigns/campaign_read.haml
+++ b/templates/campaigns/campaign_read.haml
@@ -43,18 +43,8 @@
         %tr.campaign-event{valign:'center', data-event-id:'{{event.pk}}'}
 
           %td.whitespace-no-wrap
-            %a{href:"{% url 'campaigns.campaignevent_read' event.pk %}"}
-              -if event.offset == 0
-                ON
-              -else
-                {{event.abs_offset|intcomma}}
-              -if event.offset != 0
-                {{event.single_unit_display|lower}}{{event.abs_offset|pluralize:"s"}}
-                  -if event.offset < 0
-                    -trans "before"
-                  -else
-                    -trans "after"
-              {{ event.relative_to }}
+            %a(href="{% url 'campaigns.campaignevent_read' event.pk %}")
+              {{ event.offset_display }} {{ event.relative_to.label }}
 
           %td.w-full
             -if event.event_type == 'M'
