--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -29,7 +29,7 @@
         -else
           &nbsp;triggered
 
-        %a(href='{%url "campaigns.campaignevent_read" event.campaign_event_id %}')
+        %a(href='{%url "campaigns.campaignevent_read" event.campaign_event.id %}')
           {{ eventfire.campaign_event.offset_display }} {{ eventfire.campaign_event.relative_to.name }}
 
       -elif event.type == 'channel_event'
