Fix language div width

--- a/templates/channels/channel_update.haml
+++ b/templates/channels/channel_update.haml
@@ -226,7 +226,7 @@
     }
 
     .ref-welcome-message-languages, .ref-input-placeholder-languages {
-      max-width: 380px;
+      padding-left: 10px;
     }
 
     .ref-welcome-message-languages a, .ref-input-placeholder-languages a {
