--- a/templates/channels/channelevent_calls.haml
+++ b/templates/channels/channelevent_calls.haml
@@ -17,13 +17,20 @@
           Found {{ results_count }} calls in last 90 days for <i>{{search}}</i>.
 
 -block message-list
-  %table.list-table.list_rsms_message.table.table-condensed{style: '{% if not org_perms.msgs.broadcast_send  %}margin-top:10px{% endif %}'}
+  %table.list.object-list.lined.selectable
     %tbody
       -for object in object_list
-        %tr.select-row{class:'{% cycle row1 row2 %}', onClick:'document.location="{% url "contacts.contact_read" object.contact.uuid %}"'}
-          %td.value-phone.field_contact
+        %tr.select-row{id: 'id-row-{{object.id}}', onClick:'document.location="{% url "contacts.contact_read" object.contact.uuid %}"'}
+          %td.whitespace-no-wrap
             {{ object.contact|short_name:user_org }}
-          %td.value-text.field_event_type
+          %td
+            - if object.event_type == 'mt_call'
+              %span.glyph.icon-call-outgoing
+            - elif object.event_type == 'mo_call'
+              %span.glyph.icon-call-incoming
+            - else
+              %span.glyph.icon-phone
+          %td.w-full
             - if object.event_type == 'mt_call'
               -blocktrans trimmed with duration=object.extra.duration
                 Outgoing Call ({{duration}} seconds)
@@ -36,35 +43,16 @@
               -trans "Missed Outgoing Call"
             - else
               - get_value object 'event_type'
-          %td.value-icon
-            - if object.event_type == 'mt_call'
-              %span.glyph.icon-call-outgoing
-            - elif object.event_type == 'mo_call'
-              %span.glyph.icon-call-incoming
-            - else
-              %span.glyph.icon-phone
-          %td.value-received.field_time
-            %nobr
-              {% short_datetime object.occurred_on %}
 
-        -empty
-          %tr
-            %td{colspan:3}
-              -trans "No Matching calls"
+          %td
+            .flex.w-full.items-end.justify-end.pr-4
+              .time.whitespace-no-wrap
+                {% short_datetime object.occurred_on %}
 
--block extra-style
-  {{ block.super }}
-  :css
+          -if not object_list
+            %tr.empty_list
+              %td{ colspan:'99' }
+                -trans "No Matching calls"
 
-    td.value-icon {
-      width: 20px;
-      color: #666;
-    }
-    td.value-received {
-      text-align: right;
-    }
-    td.value-phone {
-      white-space: nowrap;
-      padding-right:30px;
-      background:@color-bg-blue
-    }
+  - block paginator
+    -include "includes/pagination.haml"
