Add actual JSON version of history view

--- a/templates/contacts/contact_history.haml
+++ b/templates/contacts/contact_history.haml
@@ -1,6 +1,6 @@
 -load contacts humanize smartmin temba i18n sms
 
--for event in history
+-for event in events
   %tr(class="{{event|history_class}}")
     %td.icon
       %span.det(title='{% if event.obj.channel %}{{event.obj.channel.get_channel_type_name}} {{event.obj.channel.get_name}}{% endif %}')
@@ -169,9 +169,9 @@
     %td.created_on
       .time.flex.items-end.justify-end
         %span.short
-          {% short_datetime event.created_on %}
+          {% short_datetime event.created_on|parse_isodate %}
         %span.long.hide
-          {% format_datetime event.created_on %}
+          {% format_datetime event.created_on|parse_isodate %}
 
     %td.text-center{style:"padding-left:0px"}
       .log-icon.ml-2.text-dark-alpha-200
@@ -180,7 +180,7 @@
             .icon-docs-2.pointer-events-none
 
 -if has_older and not recent_only
-  %tr{ ic-append-from:"/contact/history/{{contact.uuid}}/?after={{after}}&before={{before}}", 
+  %tr{ ic-append-from:"/contact/history/{{contact.uuid}}/?after={{ next_after }}&before={{ next_before }}",
        ic-trigger-on:"scrolled-into-view", 
        ic-target:"table.activity tbody.previous", 
        ic-indicator:"#indicator" }
