--- a/templates/orgs/org_two_factor.haml
+++ b/templates/orgs/org_two_factor.haml
@@ -18,7 +18,6 @@
         if (secretUrl) {
           var element = document.getElementById('qr');
           element.style.display = "initial";
-
           new QRious({element: element, value: secretUrl, background: "#eee", size: 128});
         }
       })();
@@ -45,38 +44,33 @@
             {{ token.token }}
 
     .mt-8
-      %a.button-primary(id='generate-backup-tokens' style='margin-top:5px')
-        -trans "Generate Backup Tokens"
-
-      %a.button-light.ml-4(href="{% url 'orgs.org_home' %}" id='disable-two-factor-auth' style='margin-top:5px')
-        -trans "Disable Two Factor"
+      %a#disable-2fa.button-primary.mr-4(href="{% url 'orgs.org_home' %}")
+        -trans "Disable"
+      %a#regenerate-backup-tokens.button-light.mr-4
+        -trans "Regenerate Backup Tokens"
 
     -url 'orgs.org_two_factor' as two_factor_url
     :javascript
-      $('#generate-backup-tokens').click(function() {
+      $('#disable-2fa').click(function() {
+        $.ajax({type: "POST", url: "{{ two_factor_url }}", data: {"action": "disable"}})
+      });
+
+      $('#regenerate-backup-tokens').click(function() {
         $.ajax({
           type: "POST",
           url: "{{ two_factor_url }}",
-          data: {"regenerate_backup_tokens": true},
+          data: {"action": "regenerate_backup_tokens"},
           success: function( backups ) {
             var tokenHtml = '';
             for (token of backups.tokens) {
                 tokenHtml = tokenHtml + `<div class="inline-block px-2 ${token.is_used ? 'line-through' : ''}">${token.token}</div>`;
             }
-
             $('#backup').html(tokenHtml);
             $("#backup_text_help").show();
           }
         })
       });
 
-      $('#disable-two-factor-auth').click(function() {
-        $.ajax({
-          type: "POST",
-          url: "{{ two_factor_url }}",
-          data: {"disable_two_factor_auth": true}
-        })
-      });
 
 -block form-buttons
   -if not two_factor_enabled
