Hide invitation button for contacts with no connection.

--- a/templates/contacts/contact_invite_participants.haml
+++ b/templates/contacts/contact_invite_participants.haml
@@ -132,7 +132,12 @@
                               {% short_datetime object.created_on %}
 
                           %td.invite-column.value-received.field_received
-                            %a.invite.button.button-primary{href:"{% url 'contacts.contact_invite_participants' %}", 'data-uuid': "{{object.uuid}}", 'status': "active"}
+                            %a.invite.button.button-primary(
+                              class="{% if object|has_no_connection %}disconnected{% endif %}"
+                              href="{% url 'contacts.contact_invite_participants' %}"
+                              data-uuid="{{object.uuid}}"
+                              status="active"
+                            )
                               -trans "Invite"
 
                           // This is needed for action buttons
@@ -300,6 +305,10 @@
     .invite-column {
       display: table-cell !important;
       width: 100px;
+    }
+
+    .disconnected {
+      display: none !important;
     }
 
 
