--- a/templates/orgs/two_factor/verify.haml
+++ b/templates/orgs/two_factor/verify.haml
@@ -23,7 +23,7 @@
             {{ form.otp.errors }}
 
         .mt-6
-          %input.button-primary(type="submit" value='{{_("Verify")}}')
+          %input.button-primary(type="submit" value='{{_("Verify")|escape}}')
 
           %a.button-light.float-right(href="{% url 'users.two_factor_backup' %}")
             -trans "Use Backup Token"
