--- a/templates/orgs/user_two_factor_enable.haml
+++ b/templates/orgs/user_two_factor_enable.haml
@@ -5,16 +5,16 @@
   .flex.justify-center
     .w-128
       .mb-4.page-title
-        -trans "Two-factor Authentication"
+        {{ title }}
 
       {{ block.super }}
 
 -block pre-form
   .mb-6
     -blocktrans trimmed with ga_url="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2" authy_url="https://authy.com/"
-      To enable two-factor authentication, use a one-time password (OTP) application such as
+      To enable two-factor authentication on your login, use a one-time password (OTP) application such as
       <a href="{{ ga_url }}">Google Authenticator</a> or <a href="{{ authy_url }}">Authy</a> to scan the QR code
-      below and generate an OTP.
+      below.
 
   .mb-6.text-center
     %script(src="{{ STATIC_URL }}js/qrious.js")
@@ -37,3 +37,7 @@
         new QRious({element: element, value: secretUrl, background: "#eee", size: 150});
       }
     })();
+
+-block summary
+  -blocktrans trimmed
+    Two-factor Authentication is <b>disabled</b>.
