Tweak wording and coverage

--- a/templates/orgs/user_two_factor_enable.haml
+++ b/templates/orgs/user_two_factor_enable.haml
@@ -40,4 +40,4 @@
 
 -block summary
   -blocktrans trimmed
-    Two-factor Authentication is <b>disabled</b>.
+    Two-factor authentication is <b>disabled</b>.
