--- a/templates/orgs/user_two_factor_tokens.haml
+++ b/templates/orgs/user_two_factor_tokens.haml
@@ -29,4 +29,4 @@
 
 -block summary
   -blocktrans trimmed
-    Two Factor Authentication is <b>enabled</b>.
+    Two-factor authentication is <b>enabled</b>.
