--- a/templates/contacts/contact_filter.haml
+++ b/templates/contacts/contact_filter.haml
@@ -6,6 +6,6 @@
   {{current_group.name}}
 -block subtitle
   -if current_group.is_dynamic
-    .hidden.lbl-secondary.linked{onclick:"goto(event)", href:"{% url 'contacts.contact_filter' current_group.uuid %}"}
-      -trans "Smart Group"
+    -trans "Smart group based on:"
+    %i {{current_group.query}}
 
