--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -164,133 +164,134 @@
                     -plural
                       Found {{ results_count }} contacts matching <i>{{search}}</i>.
 
-              %table.list.object-list.lined.selectable
-                - if object_list
-                  %tr.contacts
-                    -if org_perms.contacts.contact_update
-                      %th.checkbox.object-row-checkbox.select-all-items-checkbox
-                        .glyph.icon-checkbox-unchecked.contacts-checkbox
-                    %th
-                    %th
-                    %th
-                    -for field in contact_fields
-                      -if field.show_in_table
-                        %th
-                          -if sort_field == field.key
-                            -if sort_direction == 'desc'
-                              %a(href="?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
-                                %div
-                                  {{ field.label }}
-                                  %span.sort.icon.icon-arrow-down-2.sort-asc.visible
+              .table-container
+                %table.list.object-list.lined.selectable
+                  - if object_list
+                    %tr.contacts
+                      -if org_perms.contacts.contact_update
+                        %th.checkbox.object-row-checkbox.select-all-items-checkbox
+                          .glyph.icon-checkbox-unchecked.contacts-checkbox
+                      %th
+                      %th
+                      %th
+                      -for field in contact_fields
+                        -if field.show_in_table
+                          %th
+                            -if sort_field == field.key
+                              -if sort_direction == 'desc'
+                                %a(href="?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %div
+                                    {{ field.label }}
+                                    %span.sort.icon.icon-arrow-down-2.sort-asc.visible
+                              -else
+                                %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                                  %div
+                                    {{ field.label }}
+                                    %span.sort.icon.icon-arrow-up51.sort-desc.visible
                             -else
                               %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                                 %div
                                   {{ field.label }}
+                                  %span.sort.icon.icon-arrow-down-2.sort-desc
+                      %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
+                        - if object_list
+                          -if sort_field == 'last_seen_on'
+                            -if sort_direction == 'desc'
+                              %a(href="?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %div
+                                  -trans "Last Seen On"
+                                  %span.sort.icon.icon-arrow-down-2.sort-asc.visible
+                            -else
+                              %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %div
+                                  -trans "Last Seen On"
                                   %span.sort.icon.icon-arrow-up51.sort-desc.visible
-                          -else
-                            %a(href="?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
-                              %div
-                                {{ field.label }}
-                                %span.sort.icon.icon-arrow-down-2.sort-desc
-                    %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
-                      - if object_list
-                        -if sort_field == 'last_seen_on'
-                          -if sort_direction == 'desc'
-                            %a(href="?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
-                              %div
-                                -trans "Last Seen On"
-                                %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                           -else
                             %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Last Seen On"
-                                %span.sort.icon.icon-arrow-up51.sort-desc.visible
-                        -else
-                          %a(href="?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
-                            %div
-                              -trans "Last Seen On"
-                              %span.sort.icon.icon-arrow-down-2.sort-desc
+                                %span.sort.icon.icon-arrow-down-2.sort-desc
 
-                    %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
-                      -if object_list
-                        -if sort_field == 'created_on'
-                          -if sort_direction == 'desc'
-                            %a(href="?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
-                              %div
-                                -trans "Created On"
-                                %span.sort.icon.icon-arrow-down-2.sort-asc.visible
+                      %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
+                        -if object_list
+                          -if sort_field == 'created_on'
+                            -if sort_direction == 'desc'
+                              %a(href="?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %div
+                                  -trans "Created On"
+                                  %span.sort.icon.icon-arrow-down-2.sort-asc.visible
+                            -else
+                              %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                                %div
+                                  -trans "Created On"
+                                  %span.sort.icon.icon-arrow-up51.sort-desc.visible
                           -else
                             %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                               %div
                                 -trans "Created On"
-                                %span.sort.icon.icon-arrow-up51.sort-desc.visible
-                        -else
-                          %a(href="?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
-                            %div
-                              -trans "Created On"
-                              %span.sort.icon.icon-arrow-down-2.sort-desc
+                                %span.sort.icon.icon-arrow-down-2.sort-desc
 
-                %tbody
-                  -for object in contacts
-                    %tr.contact.select-row.object-row(data-uuid="{{object.uuid}}" data-object-id="{{object.id}}" onrowclick='handleRowClicked("{{object.uuid}}")')
+                  %tbody
+                    -for object in contacts
+                      %tr.contact.select-row.object-row(data-uuid="{{object.uuid}}" data-object-id="{{object.id}}" onrowclick='handleRowClicked("{{object.uuid}}")')
 
-                      - if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
-                        %td.contact.checkbox.object-row-checkbox
-                          %temba-checkbox(onclick="handleRowSelection(this)")
+                        - if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
+                          %td.contact.checkbox.object-row-checkbox
+                            %temba-checkbox(onclick="handleRowSelection(this)")
 
-                      %td
-                        .whitespace-no-wrap.overflow-ellipsis-200
-                          {{ object|name:user_org }}
-                      %td
-                        .value-labels
-                          %nobr.group_labels
-                            - for group in object.user_groups.all|dictsort:"name"
-                              %a{
-                                'href': "{% url 'contacts.contact_filter' group.uuid %}",
-                                'class': "{% if not forloop.first %}hidden_group{% endif %}",
-                                'style': "text-decoration: none;"
-                              }
-                                %span.lbl.linked.mb-2.ml-2
-                                  {{ group.name }}
+                        %td
+                          .whitespace-no-wrap.overflow-ellipsis-200
+                            {{ object|name:user_org }}
+                        %td
+                          .value-labels
+                            %nobr.group_labels
+                              - for group in object.user_groups.all|dictsort:"name"
+                                %a{
+                                  'href': "{% url 'contacts.contact_filter' group.uuid %}",
+                                  'class': "{% if not forloop.first %}hidden_group{% endif %}",
+                                  'style': "text-decoration: none;"
+                                }
+                                  %span.lbl.linked.mb-2.ml-2
+                                    {{ group.name }}
 
-                      %td.w-full
-                        .whitespace-no-wrap
-                          {{ object|urn:user_org }}
+                        %td.w-full
+                          .whitespace-no-wrap
+                            {{ object|urn:user_org }}
 
-                      -for field in contact_fields
-                        -if field.show_in_table
-                          %td.field
-                            {{ object|contact_field:field.key }}
+                        -for field in contact_fields
+                          -if field.show_in_table
+                            %td.field
+                              {{ object|contact_field:field.key }}
 
-                      %td.value-received.field_received
-                        .whitespace-no-wrap
-                          -if object.last_seen_on
-                            {% format_datetime object.last_seen_on %}
-                          -else
-                            {{ "--" }}
-                      %td.value-received.field_received
-                        .whitespace-no-wrap
-                          {% format_datetime object.created_on %}
+                        %td.value-received.field_received
+                          .whitespace-no-wrap
+                            -if object.last_seen_on
+                              {% format_datetime object.last_seen_on %}
+                            -else
+                              {{ "--" }}
+                        %td.value-received.field_received
+                          .whitespace-no-wrap
+                            {% format_datetime object.created_on %}
 
-                      // This is needed for action buttons
-                      %td.hide
-                        .value-labels
-                          %nobr
-                            -for group in object.all_groups.all
-                              -if group.group_type == 'U'
-                                %span.label.label-info.lbl(data-id="{{group.id}}")
-                                  %a(href="{% url 'contacts.contact_filter' group.uuid %}")
-                                    {{group.name}}
+                        // This is needed for action buttons
+                        %td.hide
+                          .value-labels
+                            %nobr
+                              -for group in object.all_groups.all
+                                -if group.group_type == 'U'
+                                  %span.label.label-info.lbl(data-id="{{group.id}}")
+                                    %a(href="{% url 'contacts.contact_filter' group.uuid %}")
+                                      {{group.name}}
 
-                  -empty
-                    %tr.empty_list
-                      %td(colspan="99")
-                        -trans "No matching contacts."
+                    -empty
+                      %tr.empty_list
+                        %td(colspan="99")
+                          -trans "No matching contacts."
 
-                      -for field in contact_fields
-                        -if field.show_in_table
-                          %td.field
-                      %td
+                        -for field in contact_fields
+                          -if field.show_in_table
+                            %td.field
+                        %td
 
 
               .flex.flex-col.mb-16
@@ -306,54 +307,6 @@
 -block extra-style
   {{block.super}}
   :css
-    @media only screen and (max-width: 1600px) {
-      th:nth-child(n+10), td:nth-child(n+10) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 1500px) {
-      th:nth-child(n+9), td:nth-child(n+9) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 1450px) {
-      th:nth-child(n+8), td:nth-child(n+8) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 1300px) {
-      th:nth-child(n+7), td:nth-child(n+7) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 1150px) {
-      th:nth-child(n+6), td:nth-child(n+6) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 1000px) {
-      th:nth-child(n+5), td:nth-child(n+5) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 850px) {
-      th:nth-child(n+4), td:nth-child(n+4) {
-        display:none;
-      }
-    }
-
-    @media only screen and (max-width: 700px) {
-      th:nth-child(n+3), td:nth-child(n+3) {
-        display:none;
-      }
-    }
-
     .right {
       overflow-x: hidden;
       padding: 2px;
@@ -433,7 +386,13 @@
       color: #999;
     }
 
-
+    .table-container {
+      overflow-x: auto;
+      max-width: calc(100vw - 330px);
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+      border-radius: 0.5rem;
+      margin: 0 2.5px;
+    }
 
 -block extra-script
   {{ block.super }}
