--- a/templates/orgs/org_join.haml
+++ b/templates/orgs/org_join.haml
@@ -17,12 +17,7 @@
           %form#login-form{method:"post", action:"{% url 'users.user_login' %}?next={% url 'orgs.org_join_accept' secret %}"}
             %fieldset
               .control-group
-                %temba-field(disabled="true" name="username" label="{% trans 'Email Address' %}" value="{{email}}")
-                  .px-1.py-2
-                    {{email}}
-                  .hidden
-                    %input(type="text" name="username" maxlenght="150" value="{{email}}")
-
+                %temba-textinput#id_username(type="text" name="username" maxlenght="150" label="{% trans 'Email Address' %}" value="{{email}}" disabled)
               .control-group
                 %temba-textinput#id_password(type="password" name="password" label="{% trans 'Password' %}" placeholder="{% trans 'Your password, at least eight letters please' %}" password)
             -csrf_token
