Make confirm access view a subclass of smartmin login view

--- a/templates/orgs/login/login.haml
+++ b/templates/orgs/login/login.haml
@@ -5,7 +5,7 @@
   -trans "Welcome Back"
       
 -block login-content        
-  -blocktrans
+  -blocktrans trimmed
     Please sign in with your email address and password.
 
   %form#login-form(method="POST" action="/users/login/")
