--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -6,11 +6,24 @@
 -block subtitle
   -trans "Results"
 
+-block extra-style
+  %link{rel:'stylesheet', href:'{{ STATIC_URL }}css/flatpickr.min.css'}
+
 -block extra-less
 
   -compress css inline
     {% lessblock %}
       :plain
+
+        .custom-date-field {
+          width: 100% !important;
+          font-size: 13px;
+          padding: 7px 7px 6px 7px;
+          border-radius: var(--curvature-widget);
+          border: 1px solid var(--color-widget-border);
+          color: var(--color-widget-text);
+          outline: none;
+        }
 
         .page-content {
           align-self: auto;
@@ -246,6 +259,7 @@
 -block extra-script
   %script{src:"{{ STATIC_URL }}bower/highcharts/highcharts.js"}
   %script{src:"{{ STATIC_URL }}bower/highcharts/modules/drilldown.js"}
+  %script{src:"{{ STATIC_URL }}js/flatpickr.min.js"}
 
   {{ block.super }}
 
@@ -603,6 +617,14 @@
       });
 
     $(document).ready(function() {
+      $(".flatpickr").flatpickr({
+          wrap: true,
+          altInput: true,
+          altFormat: 'F j, Y',
+          dateFormat: 'Y-m-d',
+          allowInput: true
+      });
+
       $('.time').live('mouseover', function() {
         $(this).children('.long').show();
         $(this).children('.short').hide();
@@ -617,6 +639,29 @@
   %temba-dialog#confirm-run-delete(header='{{ _("Delete Run")|escapejs }}' primaryButtonName='{{ _("Delete")|escapejs }}' destructive='true')
     .p-6
       -trans "Deleting this run will remove it from your flow's results. While the messages for the contact will remain, any record of this flow run will be gone forever."
+
+  .bg-white.p-4.rounded-lg.mb-5
+    .page-subtitle
+      -trans "Filter Results"
+
+    %form#search-form.max-w-full.mt-2.flex(method="get")
+      %div{class: "w-1/2 flex"}
+        %div{class: "w-1/2 flex pr-3"}
+          %label{class: "w-1/4 flex justify-center items-center m-0"}
+            -trans "After"
+          .flatpickr{class: "w-3/4 flex justify-center items-center"}
+            %input(type="text" class="custom-date-field" name="after" placeholder="Select a date" data-input)
+        %div{class: "w-1/2 flex pr-3"}
+          %label{class: "w-1/4 flex justify-center items-center m-0"}
+            -trans "Before"
+          .flatpickr{class: "w-3/4 flex justify-center items-center"}
+            %input(type="text" class="custom-date-field" name="before" placeholder="Select a date" data-input)
+      %div{class: "w-1/2 flex flex-grow"}
+        %div{class: "w-10/12"}
+          %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}" clearable)
+        %div{class: "w-1/12 flex-grow"}
+          %button.button-primary(type='submit')
+            -trans "Filter"
 
   .bg-white.p-4.rounded-lg
     %ul.nav.nav-tabs.mb-0
