Fix resthook formax validation

--- a/templates/orgs/org_resthooks.haml
+++ b/templates/orgs/org_resthooks.haml
@@ -1,6 +1,5 @@
 -extends 'smartmin/form.html'
--load smartmin
--load i18n
+-load smartmin i18n
 
 -block pre-form
 
@@ -32,22 +31,18 @@
                   .glyph.level-checkbox
 
     .my-4
-      {% render_field 'resthook' %}
+      {% render_field 'new_slug' %}
 
 -block summary
   -with org.get_resthooks as resthooks
-    -trans "You have"
-
-    %b
-      -if resthooks|length == 0
-        -trans "no flow events"
-      -elif resthooks|length == 1
-        -trans "one flow event"
-      -else
-        {{ resthooks|length }}
-        -trans "flow events"
-
-    -trans "configured."
+    -if resthooks|length == 0
+      -blocktrans trimmed
+        You have <b>no flow events</b> configured.
+    -else
+      -blocktrans trimmed count counter=resthooks|length
+        You have <b>1 flow event</b> configured.
+      -plural
+        You have <b>{{ counter }} flow events</b> configured.
 
 -block extra-script
   {{block.super}}
